@@ -30,7 +30,6 @@ import org.junit.rules.ExpectedException;
 import com.netflix.conductor.common.metadata.tasks.TaskDef;
 import com.netflix.conductor.common.metadata.workflow.WorkflowDef;
 import com.netflix.conductor.common.metadata.workflow.WorkflowTask;
-import com.netflix.conductor.core.exception.ApplicationException;
 import com.netflix.conductor.model.TaskModel;
 import com.netflix.conductor.model.WorkflowModel;
 
@@ -89,14 +88,14 @@ public abstract class ExecutionDAOTest {
         task.setTaskId(UUID.randomUUID().toString());
         task.setTaskDefName("task1");
 
-        expectedException.expect(ApplicationException.class);
+        expectedException.expect(IllegalArgumentException.class);
         expectedException.expectMessage("Workflow instance id cannot be null");
-        getExecutionDAO().createTasks(Collections.singletonList(task));
+        getExecutionDAO().createTasks(List.of(task));
 
         task.setWorkflowInstanceId(UUID.randomUUID().toString());
-        expectedException.expect(ApplicationException.class);
+        expectedException.expect(IllegalArgumentException.class);
         expectedException.expectMessage("Task reference name cannot be null");
-        getExecutionDAO().createTasks(Collections.singletonList(task));
+        getExecutionDAO().createTasks(List.of(task));
     }
 
     @Test
@@ -108,7 +107,7 @@ public abstract class ExecutionDAOTest {
         task.setTaskDefName("task1");
         task.setWorkflowInstanceId(UUID.randomUUID().toString());
 
-        expectedException.expect(ApplicationException.class);
+        expectedException.expect(IllegalArgumentException.class);
         expectedException.expectMessage("Task reference name cannot be null");
         getExecutionDAO().createTasks(Collections.singletonList(task));
     }
